# dddjango

./: .dockerignore  .entrypoint  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/application/: services.py
src/application/services/: PagesService.py
src/core/: apps.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
src/core/migrations/: 0001_initial.py
src/domain/: entities.py
src/infrastructure/: repositories.py  schema.py
src/infrastructure/migrations/: 0001_initial.py
src/infrastructure/models/: page.py
src/presentation/: apps.py  urls.py  views.py
src/presentation/controllers/: CoreController.py  PageController.py
src/presentation/templates/: base.html
src/presentation/templates/presentation/: home.html
