[tool.poetry]
name = "django-scraper"
version = "0.1.0"
description = "Scrape with Django"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
scrapy = "^2.12.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-common"]
build-backend = "poetry.core.masonry.api"
